Resolved the CROSS Bug